feat: logger, jvm args and startup (#104)
* chore: provide custom logger and modify startup script

* chore: use zgc

* chore: indent fix

* more fancy

* chore: probes

* chore: remove is, use artifactory

* more changes

* chore: use runtime mounts

* fix: mount path

* fix: volume mount

* chore: set execution permission

* fix: configmap spacing

* chore: supress cert loggers

* chore: separate configmap

* fix: remove health checks from logger

* chore: logger updates

* chore: add missing host

* add filters

* chore: use defaults

* chore: add back few optimizations and default heap to 500Megs

* fix: quotes

* chore: add startup probes

* fix: configmap